--- a/components/Banner/profile.module.scss
+++ b/components/Banner/profile.module.scss
@@ -64,3 +64,21 @@
         }
     }
 }
+@media screen and (max-width: 567px) {
+    .profile {
+        padding: 10px 10px 2px 10px;
+        background-color: #f0f0f0;
+        border-radius: 100%;
+        margin: 0 auto 20px auto;
+        max-width: 300px;
+        .avatarWrap {
+            img {
+                border-radius: 100%;
+                margin: auto;
+            }
+        }
+        .profileDesc {
+            display: none;        
+        }
+    }
+}
