--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -6,6 +6,9 @@
 .mobNav {
     display: none;
     z-index: 99;
+    >div {
+        background-color: #fbfbfb
+    }
 }
 .navWrap {
     display: flex;
